# Logical-data-structure

./: .gitignore  CMakeLists.txt  Makefile  README.md
includes/: LogDataStruct.h  Stack.h  Text.h  WordsList.h
source/: Stack.cpp  Text.cpp  WordsList.c  WordsList.cpp  main.cpp
